Changed Images in Gallery

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,116 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="gallery.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="gallery.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
   <title>gallery</title>
 </head>
+
 <body>
-    <header id="header">
-		<nav>
-			<div class="logo"><img src="../images//icon/logo.png" alt="logo"></div>
-			<ul>
-				<li><a  href="../index.html">Home</a></li>
-        <li><a href="../aboutus/about_web.html">About Us</a></li>
-					<li><a href="../contactus/contactus.html">Contact Us</a></li>
-        <li><a class="active" href="gallery.html">Gallery</a></li>
-			</ul>
-			<div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
-			<a class="get-started" href="../login.html">Get Started</a>
-			<img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
-		</nav>
-        <div class="side-menu" id="side-menu">
-			<div class="close" onclick="sideMenu(1)"><img src="../images//icon/close.png" alt=""></div>
-			<div class="user">
-			</div>
-			<ul>
-				<li><a  href="../index.html">Home</a></li>
+  <header id="header">
+    <nav>
+      <div class="logo"><img src="../images//icon/logo.png" alt="logo"></div>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../aboutus/about_web.html">About Us</a></li>
         <li><a href="../contactus/contactus.html">Contact Us</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
-			</ul>
-		</div>
-        <section class="wrapper">
-            <i class="fa-solid fa-arrow-left button" id="prev"></i>
-            <div class="image-container">
-              <div class="carousel">
-                <img style="height:auto;"src="../images/\creator\ak1.jpg" alt="" >
-                <img src="../images/\creator\dev1.jpeg" alt="" >
-                <img src="../images//imgs/img3.jpg" alt="">
-                <img src="../images//imgs/img4.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/2.jpg" alt="">
-                <img src="../images//imgs/img5.jpg" alt="">
-                <img src="../images//imgs/img6.jpg" alt="">
-                <img src="../images//imgs/img7.jpg" alt="">
-                <img src="../images//imgs/img8.jpg" alt="">
-                <img style="height:auto;"src="refo1\../images/\imgs\1jpg.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/4.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/3.jpg" alt="">
-                <img src="../images//imgs/img2.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/5.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/6.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/7.jpg" alt="">
-                <img style="height:auto;"src="../images//imgs/8.jpg" alt="">
-              </div>
-              <i class="fa-solid fa-arrow-right button" id="next"></i>
-            </div>
-          </section>
+      </ul>
+      <div class="srch"><a href="../search/search.html"><button class="btn55">SEARCH</button></a></div>
+      <a class="get-started" href="../login.html">Get Started</a>
+      <img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
+    </nav>
+    <div class="side-menu" id="side-menu">
+      <div class="close" onclick="sideMenu(1)"><img src="../images//icon/close.png" alt=""></div>
+      <div class="user">
+      </div>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../aboutus/about_web.html">About Us</a></li>
+        <li><a href="../contactus/contactus.html">Contact Us</a></li>
+        <li><a class="active" href="gallery.html">Gallery</a></li>
+      </ul>
+    </div>
+    <section class="wrapper">
+      <i class="fa-solid fa-arrow-left button" id="prev"></i>
+      <div class="image-container">
+        <div class="carousel">
+          <img style="height:auto;" src="../images/\creator\ak1.jpg" alt="">
+          <img src="../images/\creator\dev1.jpeg" alt="">
+          <img src="../images//imgs/img3.jpg" alt="">
+          <img style="height:214px;" src="../images//imgs/img4.jpg" alt="">
+          <img style="height:auto;" src="../images//imgs/2.jpg" alt="">
+          <img src="../images//imgs/img5.jpg" alt="">
+          <img src="../images//imgs/img6.jpg" alt="">
+          <img src="../images//imgs/img7.jpg" alt="">
+          <img src="../images//imgs/img8.jpg" alt="">
+          <img style="height:auto;" src="refo1\../images/\imgs\1jpg.jpg" alt="">
+          <img style="height: 214px;" src="../images//imgs/4.jpg" alt="">
+          <img style="height:auto;" src="../images//imgs/3.jpg" alt="">
+          <img src="../images//imgs/img2.jpg" alt="">
+          <img style="height:auto;" src="../images//imgs/5.jpg" alt="">
+          <img style="height:auto;" src="../images//imgs/6.jpg" alt="">
+          <img style="height:auto;" src="../images//imgs/7.jpg" alt="">
+          <img style="height:auto;" src="../images//imgs/8.jpg" alt="">
+        </div>
+        <i class="fa-solid fa-arrow-right button" id="next"></i>
+      </div>
+    </section>
     <div class="gallery">
-        <img src="../images//imgs\img1.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/1jpg.jpg" alt="">
-        <img src="../images//imgs/img2.jpg" alt="">
-        <img src="../images//imgs/img3.jpg" alt="">
-        <img src="../images//imgs/img4.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/2.jpg" alt="">
-        <img src="../images//imgs/img5.jpg" alt="">
-        <img src="../images//imgs/img6.jpg" alt="">
-        <img src="../images//imgs/img7.jpg" alt="">
-        <img src="../images//imgs/img8.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/1jpg.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/4.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/3.jpg" alt="">
-        <img src="../images//imgs/img2.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/5.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/6.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/7.jpg" alt="">
-        <img style="height:214px;"src="../images//imgs/8.jpg" alt="">
+      <img src="../images//newfolder/i.1.jpeg" alt="">
+      <img style="height: 125px;" src="../images//newfolder/i.3.jpeg" alt="">
+      <img src="../images//newfolder/i.2.jpg" alt="">
+      <img style="height: 125px;" src="../images//newfolder/n1.jpg" alt="">
+      <img src="../images//newfolder/i.4.jpeg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.16.jpg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.5.jpg" alt="">
+
+      <img src="../images//newfolder/n3.jpeg" alt="">
+      <img style="height:214px;" src="../images//newfolder/n2.jpeg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.8.jpeg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.9.jpg" alt="">
+      <img style="height:214px;" src="../images//imgs/4.jpg" alt="">
+      <img style="height:214px;" src="../images//imgs/3.jpg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.16.jpg" alt="">
+      <img style="height:214px;" src="../images/newfolder/n4.jpeg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.11.jpg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.16.jpg" alt="">
+      <img style="height:214px;" src="../images//newfolder/i.10.jpeg" alt="">
     </div>
 
-<footer>
-  <div class="footer-container">
-    <div class="left-col">
-      <img src="../images//icon/logo - Copy.png" style="width: 200px;">
-      <div class="logo"></div>
-      <div class="social-media">
-        <a href="#"><img src="../images//icon\fb.png"></a>
-        <a href="#"><img src="../images//icon\insta.png"></a>
-        <a href="#"><img src="../images//icon\tt.png"></a>
-        <a href="#"><img src="../images//icon\ytube.png"></a>
-        <a href="#"><img src="../images//icon\linkedin.png"></a>
-      </div><br><br>
-      <p class="rights-text">Copyright © 2023 Created By Team KAMP IV , <br>
-        All Rights Reserved.</p>
-      <br><p><img src="../images//icon/location.png"> Indian Institute Of Information
-        Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
-      <p><img src="../images//icon/phone.png"> +91-1234-567-890<br><img
-          src="../images//icon/mail.png">&nbsp; KAMPIV@gmail.com</p>
-    </div>
-    <div class="right-col">
-      <h1 style="color: #fff">Our Newsletter</h1>
-      <div class="border"></div><br>
-      <p>Enter Your Email to get our News and updates.</p>
-      <form class="newsletter-form">
-        <input class="txtb" type="email" placeholder="Enter Your Email">
-        <input class="btn" type="submit" value="Submit">
-      </form>
-    </div>
-  </div>
-</footer>
-</header>
+    <footer>
+      <div class="footer-container">
+        <div class="left-col">
+          <img src="../images//icon/logo - Copy.png" style="width: 200px;">
+          <div class="logo"></div>
+          <div class="social-media">
+            <a href="#"><img src="../images//icon\fb.png"></a>
+            <a href="#"><img src="../images//icon\insta.png"></a>
+            <a href="#"><img src="../images//icon\tt.png"></a>
+            <a href="#"><img src="../images//icon\ytube.png"></a>
+            <a href="#"><img src="../images//icon\linkedin.png"></a>
+          </div><br><br>
+          <p class="rights-text">Copyright © 2023 Created By Team KAMP IV , <br>
+            All Rights Reserved.</p>
+          <br>
+          <p><img src="../images//icon/location.png"> Indian Institute Of Information
+            Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+          <p><img src="../images//icon/phone.png"> +91-1234-567-890<br><img src="../images//icon/mail.png">&nbsp;
+            KAMPIV@gmail.com</p>
+        </div>
+        <div class="right-col">
+          <h1 style="color: #fff">Our Newsletter</h1>
+          <div class="border"></div><br>
+          <p>Enter Your Email to get our News and updates.</p>
+          <form class="newsletter-form">
+            <input class="txtb" type="email" placeholder="Enter Your Email">
+            <input class="btn" type="submit" value="Submit">
+          </form>
+        </div>
+      </div>
+    </footer>
+  </header>
 
-<script src="gallery.js"></script>
+  <script src="gallery.js"></script>
 </body>
+
 </html>
