edited about us and some minor changes in nav bar of about us

--- a/aboutus/about_web.html
+++ b/aboutus/about_web.html
@@ -11,8 +11,8 @@
 			<nav>
 				<div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
 				<ul>
-					<li><a class="active" href="../index.html">Home</a></li>
-					<li><a href="../aboutus/about_web.html">About Us</a></li>
+					<li><a href="../index.html">Home</a></li>
+					<li><a class="active" href="">About Us</a></li>
 					<li><a href="../contactus/contactus.html">Contact Us</a></li>
 					<li><a href="../gallery/gallery.html">Gallery</a></li>
 				</ul>
