--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -22,7 +22,7 @@
 			<a class="get-started" href="../login.html">Get Started</a>
 			<img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
-        <div class="side-menu" id="side-menu">
+        <div class="side-menu" id="side-menu" visibility="hidden">
 			<div class="close" onclick="sideMenu(1)"><img src="../images//icon/close.png" alt=""></div>
 			<div class="user">
 			</div>
