TITLE in GALLERY is added

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -35,6 +35,11 @@
         <li><a class="active" href="gallery.html">Gallery</a></li>
       </ul>
     </div>
+<div class="gal">
+  <h1><b>GALLERY</b></h1>
+</div>
+
+
     <section class="wrapper">
       <i class="fa-solid fa-arrow-left button" id="prev"></i>
       <div class="image-container">
