changes in dashboard and search

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -12,17 +12,24 @@
 </head>
   <body>
 
+    <header id="header">
+        <nav>
+            <div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
+            <ul>
+                <li><a class="nav-item nav-link active" href="#" disabled>Dashboard <span class="sr-only">(current)</span></a></li>
+                <li><a class="nav-item nav-link" href="../chatgpt/chatgpt.html">CHATGPT</a></li>
+                <li><a class="nav-item nav-link" href="../docs/d1.html">Docs</a></li>
+                <li><a class="nav-item nav-link" href="../ai_ml/ai_ml.html">AI and ML course</a></li>
+                <li><a class="nav-item nav-link" href="../subjects/computer_courses.html">Web Development</a></li>
+            </ul>
+            <div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
+            <a class="get-started" href="../login.html">Get Started</a>
+            <!-- <img src="../images/icon/menu.png" class="menu" onclick="sideMenu(0)"
+                alt="menu"> -->
+        </nav>
+    </header>
 
-    <nav class="navbar navbar-expand navbar-dark bg-primary">
-        <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="#" disabled>Dashboard <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="../chatgpt/chatgpt.html">CHATGPT</a>
-            <a class="nav-item nav-link" href="../docs/d1.html">Docs</a>
-            <a class="nav-item nav-link" href="../ai_ml/ai_ml.html">AI and ML course</a>
-            <a class="nav-item nav-link" href="../subjects/computer_courses.html">Web Development</a>
-        </div>
-    </nav>
-    <div class="heading">
+    <div class="heading" style="margin-top:12rem;">
         <h1>Welcome User</h1>
         <h3>Enjoy perks!!!</h3>
     </div>
@@ -30,7 +37,7 @@
     <div class="row">
       <div class="col-md-4">
         <a href="../ai_ml/ai_ml.html">
-            <div class="card">
+            <div class="card" style="margin-left: 17rem;">
             <div class="card-body">
                 <h3 class="card-title">AI & ML course</h3>
                 <p class="card-text">Learn AI & ML from best teachers<br></p>
@@ -95,5 +102,61 @@
         </div>
     </footer>
     <script src="search.js"></script>
+
+<!-- Background Animation -->
+
+<div class="stars">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+  </div>
+
 </body>
 </html>
