--- a/search/search.html
+++ b/search/search.html
@@ -3,6 +3,7 @@
   <head>
     <title>Search Result</title>
     <!-- Required meta tags -->
+    <link rel="shortcut icon" type="png" href="../images/icon/favicon.png"> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
