--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<!-- PORTFOLIO -->
 		<div class="diffSection" id="portfolio_section">
 			<center><p style="font-size: 50px; padding: 150px; padding-bottom: 40px;">Portfolio</p></center>
-			<div class="content">
+			<!-- <div class="content">
 				<p>
 					“Education is the passport to the future, for tomorrow belongs to those who
 					prepare for it today.” “Your attitude, not your aptitude, will determine
@@ -111,7 +111,7 @@
 					only person who is educated is the one who has learned how to learn …and
 					change.”
 				</p>
-			</div>
+			</div> -->
 		</div>
 		<div class="extra">
 			<p>We're increasing this data every year</p>
