--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <head>
-        <link rel="shortcut icon" type="png" href="images/icon/favicon.png">
+        <link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
