--- a/login.html
+++ b/login.html
@@ -39,10 +39,10 @@
 		<script type="text/javascript" src="script.js"></script>
 
 		 <!-- Firebase App -->
-		 <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+		 <!-- <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 		 <!-- Firebase Auth -->
-		 <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
-		<script src="login/config.js"></script>
+		 <!-- <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script> -->
+		<!-- <script src="login/config.js"></script> -->
 		<script src="login/login.js"></script>
 		<script src="login/signup.js"></script>
 </body>
