--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -1,160 +1,149 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Dashboard</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+        <title>Dashboard</title>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="dashboard.css">
-</head>
-  <body>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+        <link rel="stylesheet" href="dashboard.css">
+    </head>
+    <body>
 
-    <header id="header">
-        <nav>
-            <div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
-            <ul>
-                <li><a class="nav-item nav-link active" href="#" disabled>Dashboard <span class="sr-only">(current)</span></a></li>
-                <li><a class="nav-item nav-link" href="../chatgpt/chatgpt.html">CHATGPT</a></li>
-                <li><a class="nav-item nav-link" href="../docs/d1.html">Docs</a></li>
-                <li><a class="nav-item nav-link" href="../ai_ml/ai_ml.html">AI and ML course</a></li>
-                <li><a class="nav-item nav-link" href="../subjects/computer_courses.html">Web Development</a></li>
-            </ul>
-            <div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
-            <a class="get-started" href="../login.html">Get Started</a>
-        </nav>
-    </header>
+        <header id="header">
+            <nav>
+                <div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
+                <ul>
+                    <li><a class="nav-item nav-link active" href="#" disabled>Dashboard
+                            <span class="sr-only">(current)</span></a></li>
+                    <li><a class="nav-item nav-link" href="../index.html">Home</a></li>
+                    <li><a class="nav-item nav-link"
+                            href="../chatgpt/chatgpt.html">CHATGPT</a></li>
+                    <li><a class="nav-item nav-link" href="../docs/d1.html">Docs</a></li>
+                    <li><a class="nav-item nav-link" href="../ai_ml/ai_ml.html">AI
+                            and ML course</a></li>
+                    <li><a class="nav-item nav-link"
+                            href="../subjects/computer_courses.html">Web
+                            Development</a></li>
+                </ul>
+                <div class="srch"><a href="../search/search.html"><button
+                            class="btn55">SEARCH</button></a></div>
+                <a class="get-started" href="../login.html">Get Started</a>
+            </nav>
+        </header>
 
-    <div class="heading" style="margin-top:12rem;">
-        <h1>Welcome User</h1>
-        <h3>Enjoy perks!!!</h3>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <a href="../ai_ml/ai_ml.html">
-            <div class="card" style="margin-left: 17rem;">
-            <div class="card-body">
-                <h3 class="card-title">AI & ML course</h3>
-                <p class="card-text">Learn AI & ML from best teachers<br></p>
-            </div>
-            </div>
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="../chatgpt/chatgpt.html">
-            <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">CHATGPT</h3>
-                <p class="card-text">Use ChatGPT to solve doubt for completely free, without waiting in queue</p>
-            </div>
-            </div>
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="../docs/d1.html">
-            <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Web Docs</h3>
-                <p class="card-text">Refer docs for free for HTML, CSS and JS</p>
-            </div>
-            </div>
-        </a>
-      </div>
-    </div>
-
-    <footer>
-        <div class="footer-container">
-            <div class="left-col">
-                <img src="../images/icon/logo - Copy.png" style="width:
-                    200px;">
-                <div class="logo"></div>
-                <div class="social-media">
-                    <a href="#"><img src="../images/icon\fb.png"></a>
-                    <a href="#"><img src="../images/icon\insta.png"></a>
-                    <a href="#"><img src="../images/icon\tt.png"></a>
-                    <a href="#"><img src="../images/icon\ytube.png"></a>
-                    <a href="#"><img src="../images/icon\linkedin.png"></a>
-                </div><br><br>
-                <p class="rights-text">Copyright © 2023 Created By Team KAMP
-                    IV , <br>
-                    All Rights Reserved.</p>
-                <br><p><img src="../images/icon/location.png"> Indian
-                    Institute Of Information
-                    Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
-                <p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
-                        src="../images/icon/mail.png">&nbsp;
-                    KAMPIV@gmail.com</p>
-            </div>
-            <div class="right-col">
-                <h1 style="color: #fff">Our Newsletter</h1>
-                <div class="foot-border"></div><br>
-                <p>Enter Your Email to get our News and updates.</p>
-                <form class="newsletter-form">
-                    <input class="txtb" type="email" placeholder="Enter Your Email">
-                    <input class="btn" type="submit" value="Submit">
-                </form>
-            </div>
+        <div class="heading" style="margin-top:12rem;">
+            <h1>Welcome User</h1>
+            <h3>Enjoy perks!!!</h3>
         </div>
-    </footer>
-    <script src="search.js"></script>
 
-<!-- Background Animation -->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="../images/DashBoardImg/news-AI-ML-sevices.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">AI and ML</h5>
+                      <p class="card-text">Learn AI and ML in quick and easy manner</p>
+                      <div class="abtn"><a href="../ai_ml/ai_ml.html" class="btnA"><span>Enter the world of AI and ML</span></a></div>
+                    </div>
+                  </div>
+            </div>
+            <!-- <div class="col-md-4">
+                <a href="../chatgpt/chatgpt.html">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">CHATGPT</h3>
+                            <p class="card-text">Use ChatGPT to solve doubt for
+                                completely free, without waiting in queue</p>
+                        </div>
+                    </div>
+                </a>
+            </div> -->
 
-<div class="stars">
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-  </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="../images/DashBoardImg/ChatGPT_shutterstock_CKA-scaled.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">ChatGPT</h5>
+                      <p class="card-text">Use ChatGPT to solve doubt for completely free, without waiting</p>
+                     <a href="../chatgpt/chatgpt.html" class="btnA"><span>and use your Chatbot here</span></a>
+                    </div>
+                  </div>
+            </div>
+            
 
-</body>
+            <!-- <div class="col-md-4">
+                <a href="../docs/d1.html">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Web Docs</h3>
+                            <p class="card-text">Refer docs for free for HTML,
+                                CSS and JS</p>
+                        </div>
+                    </div>
+                </a>
+            </div> -->
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="../images/DashBoardImg/docs2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Docs</h5>
+                      <p class="card-text">Read at your comfort and gain knowledge through our documentation</p>
+                      <a href="../docs/d1.html" class="btnA"><span>reading Docs</span></a>
+                    </div>
+                  </div>
+            </div>
+
+        </div>
+
+        <footer>
+            <div class="footer-container">
+                <div class="left-col">
+                    <img src="../images/icon/logo - Copy.png" style="width:
+                    200px;">
+                    <div class="logo"></div>
+                    <div class="social-media">
+                        <a href="#"><img src="../images/icon\fb.png"></a>
+                        <a href="#"><img src="../images/icon\insta.png"></a>
+                        <a href="#"><img src="../images/icon\tt.png"></a>
+                        <a href="#"><img src="../images/icon\ytube.png"></a>
+                        <a href="#"><img src="../images/icon\linkedin.png"></a>
+                    </div><br><br>
+                    <p class="rights-text">Copyright © 2023 Created By Team KAMP
+                        IV , <br>
+                        All Rights Reserved.</p>
+                    <br><p><img src="../images/icon/location.png"> Indian
+                        Institute Of Information
+                        Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+                    <p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
+                            src="../images/icon/mail.png">&nbsp;
+                        KAMPIV@gmail.com</p>
+                </div>
+                <div class="right-col">
+                    <h1 style="color: #fff">Our Newsletter</h1>
+                    <div class="foot-border"></div><br>
+                    <p>Enter Your Email to get our News and updates.</p>
+                    <form class="newsletter-form">
+                        <input class="txtb" type="email"
+                            placeholder="Enter Your Email">
+                        <input class="btn" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </footer>
+        <script src="search.js"></script>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
+
+    </body>
 </html>
